--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Easy Apply Extension</title>
     <style>
-      body {
-        width: 200px;
-        height: 100px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+        body {
+            width: 200px;
+            padding: 10px;
+        }
+        button {
+            width: 100%;
+            margin: 5px 0;
+        }
     </style>
-  </head>
-  <body>
-    <button id="sendMessageButton">Start Applying</button>
-    <button id="stopApplyingButton">Stop Applying</button>
+</head>
+<body>
+    <h3>Easy Apply</h3>
+    <button id="openButtonsWindow">Open Control Buttons</button>
     <script src="popup.js"></script>
-  </body>
+</body>
 </html>
