add new changes

--- a/pop-up.html
+++ b/pop-up.html
@@ -25,7 +25,7 @@
                     <label>For example - You can enter your job location like - banglore or delhi or any other place etc.</label>
                 </div>
                 <div class="col-md-4">
-                    <label>Number of jobs to apply(optional)</label>
+                    <label>Number of jobs to apply</label>
                     <input class="form-control" name="job_count"  type="number" id="job_count" min="1" max="10">
                     <label>For example - 50 or 100 etc.</label>
                 </div>
