started debugging the app. Reset running only for linlked in pages

--- a/pop-up.html
+++ b/pop-up.html
@@ -29,7 +29,7 @@
                     <input class="form-control" name="job_count"  type="number" id="job_count" min="1" max="10">
                     <label>For example - 50 or 100 etc.</label>
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <label>Job Type(optional)</label>
                     <select class="form-control" name="job_type" id="job_type">
                         <option value="">Please select</option>
@@ -38,7 +38,7 @@
                         <option value="On-Site">On Site</option>
                     </select>
                     <label>For example -  Please select option from dropdown.</label>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="button-wrapper">
