Fix delay method error and enhance radio button field detection

--- a/src/sidepanel/sidepanel.html
+++ b/src/sidepanel/sidepanel.html
@@ -76,22 +76,34 @@
                                     <button id="start-applications-btn" class="w-full px-3 py-2 bg-green-500 text-white rounded text-xs hover:bg-green-600 transition-colors">
                                         🚀 Apply to Current Job
                                     </button>
-                                    <button id="fetch-all-descriptions-btn" class="w-full px-3 py-2 bg-purple-500 text-white rounded text-xs hover:bg-purple-600 transition-colors">
+                                    <button id="fetch-all-descriptions-btn" class="w-full px-3 py-2 bg-blue-500 text-white rounded text-xs hover:bg-blue-600 transition-colors">
                                         📄 Fetch All Descriptions
                                     </button>
-                                    <button id="view-field-history-btn" class="w-full px-3 py-2 bg-orange-500 text-white rounded text-xs hover:bg-orange-600 transition-colors">
+                                    <button id="view-field-history-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
                                         📋 View Field History
                                     </button>
-                                    <button id="test-button-detection-btn" class="w-full px-3 py-2 bg-red-500 text-white rounded text-xs hover:bg-red-600 transition-colors">
+                                    <button id="test-button-detection-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
                                         🔍 Test Button Detection
                                     </button>
-                                    <button id="ping-content-script-btn" class="w-full px-3 py-2 bg-gray-500 text-white rounded text-xs hover:bg-gray-600 transition-colors">
+                                    <button id="test-easy-apply-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
+                                        🔍 Test Easy Apply Button
+                                    </button>
+                                    <button id="debug-next-button-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
+                                        🔍 Debug Next Button
+                                    </button>
+                                    <button id="debug-form-detection-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
+                                        🔍 Debug Form Detection
+                                    </button>
+                                    <button id="debug-field-history-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
+                                        📋 Debug Field History
+                                    </button>
+                                    <button id="ping-content-script-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
                                         📡 Ping Content Script
                                     </button>
-                                    <button id="toggle-auto-mode-btn" class="w-full px-3 py-2 bg-blue-500 text-white rounded text-xs hover:bg-blue-600 transition-colors">
+                                    <button id="toggle-auto-mode-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
                                         🔄 Toggle Auto Mode
                                     </button>
-                                    <button id="view-problematic-fields-btn" class="w-full px-3 py-2 bg-yellow-500 text-white rounded text-xs hover:bg-yellow-600 transition-colors">
+                                    <button id="view-problematic-fields-btn" class="w-full px-3 py-2 bg-yellow-500 text-black rounded text-xs hover:bg-yellow-600 transition-colors">
                                         ⚠️ View Problematic Fields
                                     </button>
                                     <button id="stop-process-btn" class="w-full px-3 py-2 bg-red-600 text-white rounded text-xs hover:bg-red-700 transition-colors" disabled>
